[package]
name = "knocket"
version = "0.1.0"
authors = ["Christofer Reinholdsson <christofer.reinholdsson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
minifb = "0.19.3"
simple_logger = "1.13.0"
log = { version = "^0.4.5" }
